# enterprise-arena

./: .dockerignore  .gitignore  BLOG.md  DEMO_GUIDE.docx.txt  Dockerfile  README.md  _upload_model_card.py  baseline_results.json  client.py  debug_smart.py  inference.py  openenv.yaml  pyproject.toml  test_playground.py  train_colab.py  trajectories.jsonl
enterprise_arena.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
landing/: index.html  package-lock.json  package.json
landing/src/: App.jsx
scripts/: colab_guide.py  scripted_baseline.py
server/: __init__.py  app.py  enterprise_arena.py  graders.py
static/: blog.html  index.html
static/assets/: index-872rxhEq.js  index-CtRD_KkO.js  index-Cwijg5dG.js  index-DCMfaakC.js  index-bTrdbn5r.js
tasks/: task_easy.json  task_hard.json  task_medium.json
tests/: test_env.py
